# polaris

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  dashboard-agent-maintenance.yml  dashboard-ci.yml  dashboard-publish.yml  dashboard-release.yml  release-unifi-unas.yml
crates/polaris-hostd/: Cargo.toml  Dockerfile  README.md
crates/polaris-hostd/src/: config.rs  deploy.rs  docker.rs  handlers.rs  http.rs  main.rs  security.rs  server.rs
dashboard/: .dockerignore  .npmrc  .prettierignore  .prettierrc.json  README.md  ROADMAP.md  package-lock.json  package.json  tsconfig.base.json
dashboard/apps/web/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  ws-server.mjs
dashboard/apps/web/src/: archiver-zip-encrypted.d.ts  instrumentation.ts
dashboard/apps/web/src/app/: globals.css  layout.tsx
dashboard/apps/web/src/components/: account-menu.tsx  app-nav.tsx  app-sidebar.tsx  brand-icons.tsx  confirm-dialog.tsx  dymo-mark.tsx  expiry-select.tsx  geo-picker.tsx  log-viewer.tsx  logos.tsx  metrics-history.tsx  notification-bell.tsx  relative-time.tsx  update-indicator.tsx  user-profile-dialog.tsx
dashboard/apps/web/src/lib/: access-lock-service.ts  apps.ts  attempt-throttle.ts  audit-service.ts  auth-client.ts  auth.ts  backup-service.ts  caddy-service.ts  container-files-service.ts  database-service.ts  deploy-service.ts  deploy-target-service.ts  deploy-volume-service.ts  docker-service.ts  domain-service.ts  drive-acl-service.ts  drive-archive-read.ts  drive-archive.ts  drive-authz.ts  drive-meta-service.ts  mime.ts  (+40 more)
dashboard/cli/: polaris
dashboard/docker/: .env.example  Caddyfile  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
dashboard/docker/updater/: Dockerfile
dashboard/docs/: deploy-per-server-edge.md
dashboard/mdns/: Dockerfile  README.md  package-lock.json  package.json  responder.mjs
dashboard/scripts/: dev-up.mjs  gen-sqlite-schema.mjs  install.ps1  install.sh  setup-ssh-access.sh  update.sh
dashboard/services/edge-guard/: Dockerfile  README.md  package.json  tsconfig.json  tsup.config.ts
dashboard/services/edge-guard/src/: authz.ts  index.ts  server.ts
dashboard/services/edge-guard/test/: authz.test.ts
dashboard/services/messaging-bridge/: Dockerfile  README.md  package.json  tsup.config.ts
dashboard/services/messaging-bridge/src/: index.ts  registry.ts  server.ts
docs/: apps-marketplace-messaging.md  deploy-roadmap.md
docs/developers/: README.md
plugins/unifi-unas/: README.md  ROADMAP.md
plugins/unifi-unas/agent/: Cargo.toml
plugins/unifi-unas/agent/src/: api.rs  broker.rs  collect.rs  config.rs  fanctl.rs  main.rs  util.rs
plugins/unifi-unas/core/: Cargo.toml
plugins/unifi-unas/core/examples/: gen_python.rs
plugins/unifi-unas/core/src/: bays.rs  fan.rs  lib.rs  model.rs  mqtt.rs  smart.rs
plugins/unifi-unas/homeassistant/: LICENSE  README.md  hacs.json  info.md  install.sh
(+237 files in other folders)
