[package]
name = "polaris-unas-core"
version = "0.1.0"
description = "Domain model, SMART parsing, bay mapping and fan control for UniFi UNAS. Shared by the on-device agent and the Polaris dashboard."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
